Documentviewer: Make AbstractViewer shared/static, depending on build

Make the abstract viewer class static if the build is static, shared
otherwise.

Fixes: QTBUG-118754
Fixes: QTBUG-118672
Change-Id: Ic98c932b6c91242e79b022a38653f434b108330d
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>
(cherry picked from commit eea2929d84c5fe84dd5c807a883bc08e9e4e04d7)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>